--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "type": "image/png"
     },
     {
-      "src": "img/Logo.png",
+      "src": "img/Logo2.png",
       "sizes": "512x512",
       "type": "image/png"
     }
