Modificacion de todo el proyecto, y añadiendo logos

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "img/Logo.png",
+      "src": "img/Logo1.png",
       "sizes": "192x192",
       "type": "image/png"
     },
